@@ -4,6 +4,11 @@ Bazaar Release Notes
 
 .. contents::
 
+  API BREAKS:
+
+    * ``LockableFiles.put_utf8`` is now deprecated.
+      (Martin Pool)
+
 
 IN DEVELOPMENT
 --------------
